[package]
name = "grossbaby"
version = "0.1.0"
edition = "2021"
authors = ["shua <shua@isthisa.email>", "ddydsz"]

# from https://bevy-cheatbook.github.io/pitfalls/performance.html
[profile.dev.package."*"]
opt-level = 3
[profile.dev]
opt-level = 1

[dependencies]
# bevy = { version = "0.13.1", features = ["wav"] } # for release
# enable dynamic linking for dev
bevy = { version = "0.13.1", features = ["wav", "dynamic_linking"] }  # for dev

# for embedding icons into windows exe's
[build-dependencies]
embed-resource = "1.6.3"

[[bin]]
name = "baby"
path = "baby/main.rs"
