[package]
name = "grossbaby"
version = "0.1.0"
edition = "2021"
authors = ["shua <shua@isthisa.email>", "ddydsz"]

# from https://bevy-cheatbook.github.io/pitfalls/performance.html
[profile.dev.package."*"]
opt-level = 3
[profile.dev]
opt-level = 1

[dependencies]
-# Use this for release
-# bevy = { version = "0.13.1", features = ["wav"] }

# enable dynamic linking for dev
bevy = { version = "0.13.1", features = ["wav", "dynamic_linking"] } 
# bevy_rapier2d = "0.18.0"
# bevy_editor_pls = "0.8.1"
bevy_embedded_assets = "0.10.2"

# for embedding icons into windows exe's
[build-dependencies]
embed-resource = "1.6.3"

[[bin]]
name = "baby"
path = "baby/main.rs"
